# kronmult993

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  kgemm_nn.hpp  kgemm_nt.hpp  kroncommon.hpp  kronmult2.hpp  kronmult2_xbatched.hpp  kronmult3.hpp  kronmult3_xbatched.hpp  kronmult4.hpp  kronmult4_xbatched.hpp  kronmult5.hpp  kronmult5_xbatched.hpp  kronmult6.hpp  kronmult6_xbatched.hpp  kronmult_cuda.cpp  source-module.source  test.py  test_kgemm_nn_batched  test_kgemm_nn_batched.cpp  test_kgemm_nt_batched  test_kgemm_nt_batched.cpp  test_kronmult6_batched  test_kronmult6_pbatched
algo-993/kronmult/: CMakeLists.txt  kronmult_gpu.hpp
algo-993/kronmult/gpu/: kronmult.hpp
algo-993/kronmult/openmp/: kronmult.hpp
algo-origin/: CMakeLists.txt
algo-origin/kronmult/batched/: batched.hpp  kronmult2_batched.cpp  kronmult4_batched.cpp  kronmult4_batched.hpp  kronmult5_batched.hpp  kronmult6_batched.hpp
algo-origin/kronmult/kgemm/: kgemm_nn.hpp  kgemm_nn_batched.cpp  kgemm_nn_batched.hpp  kgemm_nt.cpp  kgemm_nt_batched.cpp  kgemm_nt_batched.hpp
algo-origin/kronmult/no_batch/: kronmult2.hpp  kronmult5.hpp
algo-origin/kronmult/pbatched/: kronmult1_pbatched.hpp  kronmult2_pbatched.cpp  kronmult4_pbatched.cpp  kronmult4_pbatched.hpp  kronmult5_pbatched.cpp  kronmult5_pbatched.hpp  kronmult6_pbatched.cpp  pbatched.hpp
algo-origin/kronmult/xbatched/: kronmult2_xbatched.hpp  kronmult3_xbatched.hpp  kronmult4_xbatched.hpp  kronmult5_xbatched.hpp  xbatched.hpp
algo-origin/tests/: test_kgemm_nt_batched.cpp  test_kronmult6_batched.cpp
doc/: previous_readme.md
kronmult/: CMakeLists.txt  colmajor.py  gpu_operations.hpp  kroncommon.hpp  kronmult.hpp  kronmult_gpu.hpp  kronmult_openmp.hpp  naive.py  omp_reduction.hpp  rowmajor.py
kronmult/batched/: kronmult1_batched.cpp  kronmult1_batched.hpp  kronmult2_batched.hpp  kronmult3_batched.cpp  kronmult3_batched.hpp  kronmult4_batched.hpp  kronmult5_batched.cpp  kronmult5_batched.hpp  kronmult6_batched.cpp  kronmult6_batched.hpp
kronmult/gpu/: gpu_operations.hpp
kronmult/kgemm/: kgemm_nn.cpp  kgemm_nn.hpp  kgemm_nn_batched.cpp  kgemm_nn_batched.hpp  kgemm_nt.cpp  kgemm_nt.hpp  kgemm_nt_batched.cpp  kgemm_nt_batched.hpp
kronmult/no_batch/: kronmult1.hpp  kronmult2.hpp  kronmult3.hpp  kronmult4.hpp  kronmult5.hpp  kronmult6.hpp  no_batch.hpp
kronmult/openmp/: kronmult.hpp  linear_algebra.hpp  reduction.hpp
kronmult/pbatched/: kronmult1_pbatched.cpp  kronmult1_pbatched.hpp  kronmult2_pbatched.hpp  kronmult3_pbatched.cpp  kronmult3_pbatched.hpp  kronmult4_pbatched.hpp  kronmult5_pbatched.hpp  kronmult6_pbatched.hpp
kronmult/unbatched/: kronmult1.hpp  kronmult2.hpp  kronmult4.hpp  kronmult6.hpp
kronmult/xbatched/: kronmult1_xbatched.cpp  kronmult1_xbatched.hpp  kronmult2_xbatched.cpp  kronmult2_xbatched.hpp  kronmult3_xbatched.cpp  kronmult3_xbatched.hpp  kronmult4_xbatched.cpp  kronmult4_xbatched.hpp  kronmult5_xbatched.cpp  kronmult5_xbatched.hpp  kronmult6_xbatched.cpp  kronmult6_xbatched.hpp
kronmult_gpu/: CMakeLists.txt  README.md  kronmult.cu  kronmult.cuh  kronmult.h  kronmult.hpp  linear_algebra.cuh
kronmult_omp/: CMakeLists.txt  README.md  kronmult.hpp  linear_algebra.hpp
src/: kroncommon.hpp
src/batched/: kronmult3_batched.hpp  kronmult5_batched.hpp
src/no_batch/: kronmult5.hpp
src/pbatched/: kronmult4_pbatched.hpp  kronmult5_pbatched.hpp
src/xbatched/: kronmult3_xbatched.hpp  kronmult4_xbatched.hpp  kronmult5_xbatched.hpp  kronmult6_xbatched.hpp
tests/: CMakeLists.txt  README.md  bench_results.txt  kronmult_bench.cpp  kronmult_bench_gpu.cpp  kronmult_fullbench.cpp  kronmult_fullbench_gpu.cpp  kronmult_test.cpp  kronmult_test_gpu.cpp  test_kgemm_nn_batched.cpp  test_kgemm_nt_batched.cpp  test_kronmult.cpp  test_kronmult6_batched.cpp  test_kronmult6_pbatched.cpp  test_kronmult6_xbatched.cpp  test_utils.cpp  test_utils.cu  utils.cpp  utils.cu  utils.hpp  utils_gpu.hpp
tests/utils/: batch_size.h  data_generation.h  kronmult_naive.h  utils_cpu.h  utils_gpu.h
